<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/general_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Character Detail Section -->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/AnimeCover"
                                android:layout_width="128dp"
                                android:layout_height="200dp"
                                android:layout_marginTop="5dp"
                                android:scaleType="centerCrop"
                                app:layout_constraintTop_toBottomOf="@id/AnimeTittleTV"
                                app:layout_constraintStart_toStartOf="parent"
                                tools:src="@drawable/descarga" />

                            <TextView
                                android:id="@+id/AnimeTittleTV"
                                style="@style/AnimeDetailTittle"
                                android:gravity="center"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="@id/AnimeCover"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="Kimetsu no Yaiba" />

                            <TextView
                                android:id="@+id/animeStatusTittle"
                                style="@style/AnimeDetailHeaderTittle"
                                android:text="@string/section_status"
                                app:layout_constraintHorizontal_chainStyle="spread"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/AnimeTittleTV" />

                            <TextView
                                android:id="@+id/animeStatusLabel"
                                style="@style/AnimeDetailBody"
                                app:layout_constraintEnd_toEndOf="@id/animeStatusTittle"
                                app:layout_constraintStart_toStartOf="@id/animeStatusTittle"
                                app:layout_constraintTop_toBottomOf="@id/animeStatusTittle"
                                tools:text="Currently Airing" />

                            <TextView
                                android:id="@+id/animeEpisodesTittle"
                                style="@style/AnimeDetailHeaderTittle"
                                android:text="@string/section_episodes"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeStatusLabel" />

                            <TextView
                                android:id="@+id/animeEpisodesLabel"
                                style="@style/AnimeDetailBody"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeEpisodesTittle"
                                tools:text="13" />

                            <TextView
                                android:id="@+id/animeGenreTittle"
                                style="@style/AnimeDetailHeaderTittle"
                                android:text="@string/section_genres"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeEpisodesLabel"  />

                            <TextView
                                android:id="@+id/animeGenreLabel"
                                style="@style/AnimeDetailBody"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeGenreTittle"
                                tools:text="Action, Fantasy, Supernatural" />

                            <TextView
                                android:id="@+id/animeStudiosTittle"
                                style="@style/AnimeDetailHeaderTittle"
                                android:text="@string/section_studios"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeGenreLabel"  />

                            <TextView
                                android:id="@+id/animeStudiosLabel"
                                style="@style/AnimeDetailBody"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf ="@id/AnimeCover"
                                app:layout_constraintTop_toBottomOf="@id/animeStudiosTittle"
                                tools:text="Madhouse" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <!-- Location & Origin Sections -->

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/parentOrigin"
                        style="@style/CharacterDetailLocationSectionCard"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/character_detail_location_height"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/parentLocation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/CharacterDetailSectionTitle"
                                android:text="@string/section_score" />

                            <TextView
                                style="@style/CharacterDetailLocationSectionBody"
                                tools:text="8.5" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/parentLocation"
                        style="@style/CharacterDetailLocationSectionCard"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/character_detail_location_height"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/parentOrigin"
                        app:layout_constraintTop_toTopOf="parent"
                        card_view:cardCornerRadius="10dp"
                        card_view:cardElevation="5dp"
                        card_view:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                style="@style/CharacterDetailSectionTitle"
                                android:text="@string/section_ranked" />

                            <TextView
                                style="@style/CharacterDetailLocationSectionBody"
                                tools:text="211" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Episode List Section -->

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="5dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/CharacterDetailSectionTitle"
                            android:text="@string/section_synopsis" />

                        <ProgressBar
                            android:id="@+id/episodeProgressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />

                        <!--                        <androidx.recyclerview.widget.RecyclerView-->
                        <!--                            android:id="@+id/rvEpisodeList"-->
                        <!--                            android:layout_width="match_parent"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:orientation="vertical"-->
                        <!--                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
                        <!--                            tools:itemCount="8"-->
                        <!--                            tools:listitem="@layout/item_list_episode" />-->

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/characterFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/parent"
            app:layout_anchorGravity="bottom|end"
            app:tint="@android:color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>